--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@
     box-sizing: border-box;
     font-family: 'prem';
 }
-
+body, html {
+    overflow-x: hidden;
+}
 html {
     font-size: 20px;
 }
@@ -350,8 +352,10 @@ a {
 }
 
 .mySwiper {
-    width: 80%;
+    width: 60%;
     height: 70%;
+    min-width: 280px;
+    max-width: 100%;
 }
 
 .mySwiper .swiper-wrapper {
@@ -366,26 +370,47 @@ a {
     border: 1px solid #000;
     transition: all .5s ease;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
+.swiper-slide .description {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(10%);
+    transition: opacity .5s ease, transform .5s ease;
+    cursor: pointer;
+  }
+  
+  /* 이미지 hover 시 설명 영역 등장 */
+.swiper-slide:hover .description {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0%);
+}
+  
 .mySwiper .swiper-wrapper .swiper-slide:hover {
     transform: scale(1.03);
     box-shadow:
     0 10px 20px rgba(0, 0, 0, 0.5),
     inset 0 0 10px rgba(0, 0, 0, 0.2);
-  }
-
-.mySwiper .swiper-wrapper  .swiper-slide .description {
-    width: 30%;
-    height: 80%;
-    margin-left: 2rem;
 }
+
 .mySwiper .swiper-wrapper  .swiper-slide .description h1 {
     font-family: 'preb';
     font-size: 2rem;
-    margin-bottom: 30%;
+    margin-bottom: 5%;
     color: #001A9B;
 }
-.mySwiper .swiper-wrapper  .swiper-slide .description h2 {
+.mySwiper .swiper-wrapper .swiper-slide .description h2 {
     display: flex;
     align-items: center;
     font-family: 'preb';
@@ -398,18 +423,18 @@ a {
     margin: 0 1.5rem;
     color: #333;
 }
-.mySwiper .swiper-wrapper  .swiper-slide .description p {
-    width: 14rem;
-    margin-top: 2rem;
+.mySwiper .swiper-wrapper .swiper-slide .description p {
+    margin-top: 1.5rem;
 }
-.mySwiper .swiper-wrapper  .swiper-slide img {
-    width: 70%;
+.mySwiper .swiper-wrapper .swiper-slide img {
+    width: 100%;
     height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-    transition: transform 0.3s ease;
+    display: block;
+    transition: filter 0.3s ease;
 }
-
+.swiper-slide:hover img {
+    filter: blur(3px);
+  }
 .swiper-slide {
     display: flex;
     align-items: center;
@@ -457,14 +482,14 @@ a {
    height: 2.5rem;
    margin: 0.5rem;
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.8;
     transition: opacity 0.3s, transform 0.3s;
 }
 .custom-pagination img.active {
         filter: brightness(1.2);
         transform: scale(1.05);
-        border: 2px solid #ff5e57;
-        border-radius: 10px;
+    border: 2px solid #ff5e57;
+    border-radius: 10px;
 }
 
 .modal {
@@ -610,6 +635,10 @@ a {
     height: 3rem;
     z-index: 9999;
     cursor: pointer;
+}
+.gotop img {
+    width: 100%;
+    height: 100%;
 }
   
 .gotop:hover {
